# hildon-control-panel

./: ChangeLog  Makefile.am  configure.ac
data/: Makefile.am  applets.desktop  hildon-control-panel.desktop.in  hildon-control-panel.pc.in  hildon-control-panel.schemas
debian/: changelog  control  hildon-control-panel-dev.install  rules
src/: Makefile.am  hcp-app-list.c  hcp-app-list.h  hcp-app-loader.c  hcp-app-view.c  hcp-app-view.h  hcp-app.c  hcp-app.h  hcp-applist.c  hcp-config-keys.h  hcp-grid-item-private.h  hcp-grid-item.c  hcp-grid.c  hcp-grid.h  hcp-item.c  hcp-main.c  hcp-main.h  hcp-marshalers.c  hcp-marshalers.list  hcp-program.c  hcp-program.h  hcp-rfs.c  hcp-rfs.h  hcp-view.c  hcp-view.h  hcp-window.c  hcp-window.h
